# wx_app_config_tutorial

./: CMakeLists.txt  Info.plist  LICENSE  README.md
src/: app.cpp  main_frame.cpp  main_frame.h
